# enzymes

./: .gitignore  README.md  main.py  pyproject.toml
src/enzymes/: data.py
